# SetupFindPythonMWE

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
