CMAKE_MINIMUM_REQUIRED(VERSION 3.1)

PROJECT (TEST)

set(CMAKE_MODULE_PATH ${TEST_SOURCE_DIR}/cmake ${CMAKE_MODULE_PATH})

MESSAGE( STATUS "pythonLocation: " $ENV{pythonLocation} )

FIND_PACKAGE( PythonLibsNew 3 )

MESSAGE( STATUS "PYTHON_EXECUTABLE: " ${PYTHON_EXECUTABLE} )
MESSAGE( STATUS "PYTHON_LIBRARY: " ${PYTHON_LIBRARY} )
MESSAGE( STATUS "PYTHON_INCLUDE_DIR: " ${PYTHON_INCLUDE_DIR} )
MESSAGE( STATUS "PYTHON_VERSION: " ${PYTHON_VERSION} )

# Search a second time with REQUIRED to dump diagnostic messages and trigger visible failure to CI
FIND_PACKAGE( PythonLibsNew 3 REQUIRED )
